--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ __pycache__/
 
 # Distribution / packaging
 dist/*
-!dist/placeholder.txt
+!dist/.gitkeep
 build/*
-!build/placeholder.txt
+!build/.gitkeep
 
 
 *.egg-info/
