--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "cyberwave-edge-core"
 version = "0.0.6"
 description = "The core component of the Cyberwave Edge Node"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<4.0"
 license = {text = "MIT"}
 authors = [
     {name = "Cyberwave", email = "info@cyberwave.com"},
